--- a/Obligatorio-letra.ipynb
+++ b/Obligatorio-letra.ipynb
@@ -9,7 +9,7 @@
     "**Fecha de entrega:** 3/12/2025  \n",
     "**Puntaje máximo:** 50 puntos\n",
     "\n",
-    "**Alumno(s):** [Nombre(s) y Apellido(s)]\n",
+    "**Alumno:** Johny Kidd (228175)\n",
     "\n",
     "## Obligatorio\n",
     "\n",
