--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ef57be6f",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,6 @@
     "    Intenta cargar la máscara. Prioriza el Canal Alfa, luego el Grayscale.\n",
     "    Devuelve la máscara como un array binario (0 o 1).\n",
     "    \"\"\"\n",
-    "    # 1. Intento con PIL (más robusto para PNGs y Canal Alfa)\n",
     "    try:\n",
     "        img = Image.open(mask_path)\n",
     "        \n",
@@ -68,16 +67,14 @@
     "            # Grayscale de un canal\n",
     "            raw_mask = np.array(img, dtype=np.uint8)\n",
     "        elif img.mode == 'RGB':\n",
-    "            # Si es RGB, a veces la info está en un solo canal (ej. R)\n",
     "            raw_mask = np.array(img.split()[0], dtype=np.uint8)\n",
     "        else:\n",
-    "            return None # Modo no soportado\n",
+    "            return None \n",
     "            \n",
     "        # Binarizar: Píxeles de segmentación > 0 se vuelven 1\n",
     "        return (raw_mask > 0).astype(np.uint8) \n",
     "\n",
     "    except Exception:\n",
-    "        # Fallo en la lectura con PIL, puede que el archivo esté corrupto\n",
     "        return None \n",
     "\n"
    ]
@@ -280,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "74b77a9b",
    "metadata": {},
    "outputs": [
@@ -324,7 +321,6 @@
     "plt.grid(alpha=0.3)\n",
     "plt.show()\n",
     "\n",
-    "# 3. Imprimir los resultados y la justificación\n",
     "print(\"\\n--- Resultados de Estadísticas de Color ---\")\n",
     "print(f\"📊 Media por canal (R, G, B): {train_mean}\")\n",
     "print(f\"📊 Desviación Estándar por canal (R, G, B): {train_std}\")\n",
@@ -344,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5fc9eede",
    "metadata": {},
    "outputs": [
@@ -396,7 +392,6 @@
     "try:\n",
     "    total_pixels = 800 * 800 \n",
     "except NameError:\n",
-    "    # Fallback por si la variable no está definida\n",
     "    print(\"Determinando el tamaño de la máscara...\")\n",
     "    sample_mask = load_mask_robust(os.path.join(TRAIN_MASKS_DIR, mask_files[0]))\n",
     "    if sample_mask is not None:\n",
@@ -459,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a68b71ef",
    "metadata": {},
    "outputs": [
@@ -503,39 +498,32 @@
     "    fig, axes = plt.subplots(num_samples, 3, figsize=(15, 4 * num_samples))\n",
     "    fig.suptitle('Visualización Exploratoria: Imagen, Máscara y Overlay', fontsize=16, y=1.02)\n",
     "    \n",
-    "    # Asegurar que 'axes' sea un array 2D incluso para num_samples=1\n",
     "    if num_samples == 1: \n",
     "        axes = axes.reshape(1, -1) \n",
     "\n",
     "    print(\"\\n--- 4. VISUALIZACIÓN EXPLORATORIA ---\")\n",
     "    \n",
     "    for i, filename in enumerate(sample_files):\n",
-    "        # 1. Cargar Imagen (BGR -> RGB)\n",
     "        img_bgr = cv2.imread(os.path.join(img_dir, filename))\n",
     "        if img_bgr is None:\n",
     "            continue\n",
     "        img_rgb = cv2.cvtColor(img_bgr, cv2.COLOR_BGR2RGB)\n",
     "        \n",
-    "        # 2. Cargar Máscara (Usando la función robusta del Paso 1)\n",
     "        mask_bin = load_mask_robust(os.path.join(mask_dir, filename))\n",
     "        \n",
     "        if mask_bin is None:\n",
     "            continue\n",
     "        \n",
-    "        # --- Columna 1: IMAGEN ORIGINAL ---\n",
     "        axes[i, 0].imshow(img_rgb)\n",
     "        axes[i, 0].set_title(f'Original: {filename}', fontsize=11)\n",
     "        axes[i, 0].axis('off')\n",
     "\n",
-    "        # --- Columna 2: MÁSCARA GROUND TRUTH ---\n",
     "        # Multiplicamos por 255 para que el 1 binario se vea blanco\n",
     "        axes[i, 1].imshow(mask_bin * 255, cmap='gray')\n",
     "        axes[i, 1].set_title('Máscara Binaria (Ground Truth)', fontsize=11)\n",
     "        axes[i, 1].axis('off')\n",
     "        \n",
-    "        # --- Columna 3: OVERLAY (Superposición) ---\n",
     "        axes[i, 2].imshow(img_rgb)\n",
-    "        # Creamos una capa para la máscara: se muestra solo donde la máscara es 1\n",
     "        masked_overlay = np.ma.masked_where(mask_bin == 0, mask_bin)\n",
     "        axes[i, 2].imshow(masked_overlay, cmap='spring', alpha=0.6) # Usamos un color brillante\n",
     "        axes[i, 2].set_title('Overlay (Alineación de Bordes)', fontsize=11)\n",
@@ -557,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "83d70ab4",
    "metadata": {},
    "outputs": [
@@ -614,27 +602,20 @@
     "        if img is None:\n",
     "            continue\n",
     "            \n",
-    "        # HSV separa la intensidad (V) y el color (H, S)\n",
     "        img_hsv = cv2.cvtColor(img, cv2.COLOR_BGR2HSV) \n",
     "        \n",
-    "        # Canales (H: Hue, S: Saturación, V: Valor/Brillo)\n",
     "        H, S, V = cv2.split(img_hsv) \n",
     "        \n",
-    "        # 2. Brillo (Brightness): Media del canal V\n",
     "        brightness_list.append(V.mean())\n",
     "        \n",
-    "        # 3. Contraste (Contrast): Desviación Estándar del canal V\n",
     "        contrast_list.append(V.std())\n",
     "        \n",
-    "        # 4. Saturación (Saturation): Media del canal S\n",
     "        saturation_list.append(S.mean())\n",
     "\n",
     "    return np.array(brightness_list), np.array(contrast_list), np.array(saturation_list)\n",
     "\n",
-    "# 1. Ejecutar el cálculo\n",
     "brightness_array, contrast_array, saturation_array = calculate_color_metrics(TRAIN_IMAGES_DIR, img_files)\n",
     "\n",
-    "# 2. Generar los Histogramas\n",
     "fig, axes = plt.subplots(1, 3, figsize=(18, 5))\n",
     "fig.suptitle('Distribución de Brillo, Contraste y Saturación en el Dataset', fontsize=16)\n",
     "\n",
@@ -671,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1e737183",
    "metadata": {},
    "outputs": [
@@ -1749,18 +1730,14 @@
     "        \n",
     "        if mask_bin is None: continue\n",
     "        \n",
-    "        # Aseguramos que sea UINT8, que es el formato que CV2 espera para la mayoría de sus funciones\n",
     "        mask_uint8 = mask_bin.astype(np.uint8) \n",
     "        \n",
     "        # 1. Detección de Agujeros (Holes)\n",
-    "        # Dilatación seguida de Erosión (Close) rellena pequeños agujeros internos\n",
-    "        # Si la suma de píxeles cambia, significa que se rellenó un agujero.\n",
+    "\n",
     "        mask_closed = cv2.morphologyEx(mask_uint8, cv2.MORPH_CLOSE, kernel)\n",
     "        holes_detected = np.sum(mask_closed) != np.sum(mask_uint8)\n",
     "        \n",
     "        # 2. Detección de Componentes Desconectados (Piezas separadas)\n",
-    "        # cv2.connectedComponentsWithStats: El primer valor (ret) es el número de componentes.\n",
-    "        # El componente 0 es siempre el fondo. Por lo tanto, (ret - 1) es el número de objetos.\n",
     "        ret, labels, stats, centroids = cv2.connectedComponentsWithStats(mask_uint8, connectivity=8)\n",
     "        \n",
     "        # num_objects es el número de componentes conectados de la PERSONA (no el fondo)\n",
@@ -1786,7 +1763,6 @@
     "        print(f\"  - Agujeros detectados: **{sample_error['holes']}**\")\n",
     "        print(f\"  - Componentes separados: **{sample_error['components']}** (Se espera 1)\")\n",
     "\n",
-    "    # 4. Justificación de Post-Procesamiento\n",
     "    if total_files > 0 and total_noisy / total_files > 0.02: \n",
     "        print(\"\\n**Decisión de Post-Procesamiento:**\")\n",
     "        print(\"Dado que la detección de ruido es significativa (> 2%), se recomienda aplicar operaciones morfológicas (como el cierre o la selección del componente más grande) a la **salida del modelo** para rellenar agujeros pequeños y asegurar un solo objeto por segmentación.\")\n",
@@ -1991,7 +1967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "70cdc32c",
    "metadata": {},
    "outputs": [
@@ -2042,7 +2018,6 @@
     "        if img is None:\n",
     "            continue\n",
     "            \n",
-    "        # Convertir a flotante (0-255)\n",
     "        img = img.astype(np.float32) \n",
     "        H, W = img.shape\n",
     "        \n",
@@ -2061,10 +2036,8 @@
     "            \n",
     "    return np.array(local_std_list)\n",
     "\n",
-    "# 1. Ejecutar el cálculo\n",
     "noise_array = calculate_local_noise(TRAIN_IMAGES_DIR, img_files, patch_size=10)\n",
     "\n",
-    "# 2. Generar el Histograma\n",
     "if noise_array.size > 0:\n",
     "    mean_noise = noise_array.mean()\n",
     "    std_noise = noise_array.std()\n",
@@ -2091,7 +2064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "e7e710d5",
    "metadata": {},
    "outputs": [
@@ -2129,7 +2102,6 @@
     "import os\n",
     "import math\n",
     "\n",
-    "# Asumiendo que TRAIN_MASKS_DIR, mask_files y load_mask_robust están definidos\n",
     "\n",
     "def calculate_mask_compactness(mask_dir, file_list):\n",
     "    \"\"\"Calcula la compacidad de los contornos principales de la máscara.\"\"\"\n",
@@ -2144,7 +2116,6 @@
     "        if mask_bin is None or np.sum(mask_bin) == 0:\n",
     "            continue\n",
     "            \n",
-    "        # 1. Encontrar contornos (Usando cv2.RETR_EXTERNAL para el contorno exterior)\n",
     "        # La máscara debe ser uint8.\n",
     "        contours, _ = cv2.findContours(mask_bin.astype(np.uint8), cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_NONE)\n",
     "        \n",
@@ -2153,20 +2124,16 @@
     "            largest_contour = max(contours, key=cv2.contourArea)\n",
     "            \n",
     "            area = cv2.contourArea(largest_contour)\n",
-    "            # cv2.arcLength calcula el perímetro\n",
     "            perimeter = cv2.arcLength(largest_contour, True) \n",
     "            \n",
     "            if area > 0:\n",
-    "                # Calcular compacidad\n",
     "                compactness = (perimeter ** 2) / (4 * math.pi * area)\n",
     "                compactness_list.append(compactness)\n",
     "        \n",
     "    return np.array(compactness_list)\n",
     "\n",
-    "# 1. Ejecutar el cálculo\n",
     "compactness_array = calculate_mask_compactness(TRAIN_MASKS_DIR, mask_files)\n",
     "\n",
-    "# 2. Generar el Histograma\n",
     "if compactness_array.size > 0:\n",
     "    mean_compactness = compactness_array.mean()\n",
     "    \n",
@@ -2191,7 +2158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "fcb9d9dc",
    "metadata": {},
    "outputs": [
@@ -2239,7 +2206,6 @@
     "from tqdm import tqdm\n",
     "import os\n",
     "\n",
-    "# Asumiendo que TRAIN_MASKS_DIR, mask_files y load_mask_robust están definidos\n",
     "IMG_CENTER = np.array([400, 400]) # Centro de una imagen 800x800\n",
     "\n",
     "def calculate_centering_distance(mask_dir, file_list):\n",
@@ -2261,7 +2227,6 @@
     "        # Seleccionar el contorno más grande\n",
     "        largest_contour = max(contours, key=cv2.contourArea)\n",
     "        \n",
-    "        # Calcular el momento (para encontrar el centroide)\n",
     "        M = cv2.moments(largest_contour)\n",
     "        \n",
     "        if M[\"m00\"] != 0:\n",
@@ -2277,7 +2242,6 @@
     "        \n",
     "    return np.array(distance_list)\n",
     "\n",
-    "# Ejecutar el cálculo\n",
     "distance_array = calculate_centering_distance(TRAIN_MASKS_DIR, mask_files)\n",
     "\n",
     "if distance_array.size > 0:\n",
